--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -66,6 +66,9 @@
 /.run                                                @DataDog/agent-devx-loops
 /.run/docker/                                        @DataDog/container-integrations @DataDog/container-platform
 
+/skaffold.yaml                                       @DataDog/agent-devx-infra @DataDog/agent-devx-loops @DataDog/container-platform
+/.run/skaffold/                                      @DataDog/agent-devx-infra @DataDog/agent-devx-loops @DataDog/container-platform
+
 # Gitlab files
 # Files containing job contents are owned by teams in charge of the jobs + agent-devx-infra or agent-delivery
 # Files that only describe structure (eg. includes, rules) are owned by agent-devx-infra
@@ -563,6 +566,8 @@
 /tasks/update_go.py                     @DataDog/agent-shared-components
 /tasks/unit_tests/update_go_tests.py    @DataDog/agent-shared-components
 /tasks/cluster_agent_cloudfoundry.py    @DataDog/platform-integrations
+/tasks/devcontainer.py                  @DataDog/agent-devx-infra @DataDog/agent-devx-loops @DataDog/container-platform
+/tasks/skaffold.py                      @DataDog/agent-devx-infra @DataDog/agent-devx-loops @DataDog/container-platform
 /tasks/new_e2e_tests.py                 @DataDog/agent-e2e-testing @DataDog/agent-devx-loops
 /tasks/process_agent.py                 @DataDog/container-intake
 /tasks/system_probe.py                  @DataDog/ebpf-platform
