Use `test-infra-definitions` from DataDog/test-infra-definitions#1355

--- a/.gitlab/common/test_infra_version.yml
+++ b/.gitlab/common/test_infra_version.yml
@@ -5,5 +5,5 @@
 
 ---
 variables:
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES: 9f38bc4eab68
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: ''
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES: 196227b3e001
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: '-dev'
