--- a/.gitlab/functional_test/include.yml
+++ b/.gitlab/functional_test/include.yml
@@ -4,6 +4,7 @@
 
 include:
   - .gitlab/functional_test/serverless.yml
+  - .gitlab/functional_test/static_quality_gate.yml
   - .gitlab/functional_test/regression_detector.yml
   - .gitlab/kernel_matrix_testing/common.yml
   - .gitlab/kernel_matrix_testing/system_probe.yml
