--- a/.gitlab/source_test/include.yml
+++ b/.gitlab/source_test/include.yml
@@ -13,4 +13,5 @@ include:
   - .gitlab/source_test/slack.yml
   - .gitlab/source_test/golang_deps_diff.yml
   - .gitlab/source_test/notify.yml
+  - .gitlab/source_test/protobuf.yml
   - .gitlab/source_test/tooling_unit_tests.yml
