Introduce intake connection count check
This commit introduces a new check to all quality gate experiments bounding
above the connections established by Agent to the Datadog intake. Here the
intake is our in-rig endpoint and not the actual Datadog API intake, so we
have perfect knowledge.

This check is intended to preserve status quo and is intentionally generous.

Signed-off-by: Brian L. Troutwine <brian.troutwine@datadoghq.com>

--- a/test/regression/cases/quality_gate_logs/experiment.yaml
+++ b/test/regression/cases/quality_gate_logs/experiment.yaml
@@ -35,3 +35,9 @@ checks:
     bounds:
       series: lost_bytes
       upper_bound: 0KiB
+
+  - name: intake_connections
+    description: "Connections established to intake APIs. This puts a bound on total connections per Agent instance."
+    bounds:
+      series: "connection.current"
+      upper_bound: 6
