--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -559,6 +559,7 @@
 /tasks/                                 @DataDog/agent-devx-loops @DataDog/agent-devx-infra
 /tasks/msi.py                           @DataDog/windows-agent
 /tasks/agent.py                         @DataDog/agent-shared-components
+/tasks/build_tags.py                    @DataDog/agent-delivery
 /tasks/go_deps.py                       @DataDog/agent-shared-components
 /tasks/dogstatsd.py                     @DataDog/agent-metrics-logs
 /tasks/update_go.py                     @DataDog/agent-shared-components
