--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -302,6 +302,7 @@
 /comp/netflow @DataDog/ndm-integrations
 /comp/networkpath @DataDog/Networks @DataDog/network-device-monitoring
 /comp/otelcol @DataDog/opentelemetry
+/comp/ownerdetection @DataDog/container-app
 /comp/process @DataDog/container-intake
 /comp/remote-config @DataDog/remote-config
 /comp/snmptraps @DataDog/ndm-core
