--- a/.gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
+++ b/.gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
@@ -9,7 +9,11 @@ include:
 .deploy_containers-cws-instrumentation-base:
   extends: .docker_publish_job_definition
   stage: deploy_cws_instrumentation
-  dependencies: []
+  needs:
+    - job: "docker_build_cws_instrumentation_amd64"
+      artifacts: false
+    - job: "docker_build_cws_instrumentation_arm64"
+      artifacts: false
   before_script:
     - if [[ "$VERSION" == "" ]]; then VERSION="$(inv agent.version --url-safe)" || exit $?; fi
     - if [[ "$CWS_INSTRUMENTATION_REPOSITORY" == "" ]]; then export CWS_INSTRUMENTATION_REPOSITORY="cws-instrumentation"; fi
