--- a/.gitlab/e2e_install_packages/windows.yml
+++ b/.gitlab/e2e_install_packages/windows.yml
@@ -38,6 +38,7 @@
       - E2E_MSI_TEST: TestUpgradeFromLatest
       - E2E_MSI_TEST: TestPersistingIntegrations
       - E2E_MSI_TEST: TestIntegrationFolderPermissions
+      - E2E_MSI_TEST: TestIntegrationRollback
       - E2E_MSI_TEST: TestUpgradeRollback
       - E2E_MSI_TEST: TestUpgradeRollbackWithoutCWS
       - E2E_MSI_TEST: TestUpgradeChangeUser
