--- a/.gitlab/source_test/protobuf.yml
+++ b/.gitlab/source_test/protobuf.yml
@@ -2,6 +2,7 @@ protobuf_test:
   stage: source_test
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   tags: ["arch:amd64"]
+  needs: []
   rules:
     - !reference [.except_main_or_release_branch]
     - !reference [.except_disable_unit_tests]
