--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -169,51 +169,51 @@ variables:
   # Build images versions
   # To use images from datadog-agent-buildimages dev branches, set the corresponding
   # SUFFIX variable to _test_only
-  DATADOG_AGENT_BUILDIMAGES_SUFFIX: ""
-  DATADOG_AGENT_BUILDIMAGES: v50263243-1a30c934
-  DATADOG_AGENT_WINBUILDIMAGES_SUFFIX: ""
-  DATADOG_AGENT_WINBUILDIMAGES: v50263243-1a30c934
-  DATADOG_AGENT_ARMBUILDIMAGES_SUFFIX: ""
-  DATADOG_AGENT_ARMBUILDIMAGES: v50263243-1a30c934
-  DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX: ""
-  DATADOG_AGENT_SYSPROBE_BUILDIMAGES: v50263243-1a30c934
-  DATADOG_AGENT_BTF_GEN_BUILDIMAGES_SUFFIX: ""
-  DATADOG_AGENT_BTF_GEN_BUILDIMAGES: v50263243-1a30c934
+  DATADOG_AGENT_BUILDIMAGES_SUFFIX: "_test_only"
+  DATADOG_AGENT_BUILDIMAGES: v53294406-72bf06e2
+  DATADOG_AGENT_WINBUILDIMAGES_SUFFIX: "_test_only"
+  DATADOG_AGENT_WINBUILDIMAGES: v53294406-72bf06e2
+  DATADOG_AGENT_ARMBUILDIMAGES_SUFFIX: "_test_only"
+  DATADOG_AGENT_ARMBUILDIMAGES: v53294406-72bf06e2
+  DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX: "_test_only"
+  DATADOG_AGENT_SYSPROBE_BUILDIMAGES: v53294406-72bf06e2
+  DATADOG_AGENT_BTF_GEN_BUILDIMAGES_SUFFIX: "_test_only"
+  DATADOG_AGENT_BTF_GEN_BUILDIMAGES: v53294406-72bf06e2
   # New images to enable different version per image - not used yet
-  CI_IMAGE_BTF_GEN: v50263243-1a30c934
-  CI_IMAGE_BTF_GEN_SUFFIX: ""
-  CI_IMAGE_DEB_X64: v50263243-1a30c934
-  CI_IMAGE_DEB_X64_SUFFIX: ""
-  CI_IMAGE_DEB_ARM64: v50263243-1a30c934
-  CI_IMAGE_DEB_ARM64_SUFFIX: ""
-  CI_IMAGE_DEB_ARMHF: v50263243-1a30c934
-  CI_IMAGE_DEB_ARMHF_SUFFIX: ""
-  CI_IMAGE_DD_AGENT_TESTING: v50263243-1a30c934
-  CI_IMAGE_DD_AGENT_TESTING_SUFFIX: ""
-  CI_IMAGE_DOCKER_X64: v50263243-1a30c934
-  CI_IMAGE_DOCKER_X64_SUFFIX: ""
-  CI_IMAGE_DOCKER_ARM64: v50263243-1a30c934
-  CI_IMAGE_DOCKER_ARM64_SUFFIX: ""
-  CI_IMAGE_GITLAB_AGENT_DEPLOY: v50263243-1a30c934
-  CI_IMAGE_GITLAB_AGENT_DEPLOY_SUFFIX: ""
-  CI_IMAGE_LINUX_GLIBC_2_17_X64: v50263243-1a30c934
-  CI_IMAGE_LINUX_GLIBC_2_17_X64_SUFFIX: ""
-  CI_IMAGE_LINUX_GLIBC_2_23_ARM64: v50263243-1a30c934
-  CI_IMAGE_LINUX_GLIBC_2_23_ARM64_SUFFIX: ""
-  CI_IMAGE_SYSTEM_PROBE_X64: v50263243-1a30c934
-  CI_IMAGE_SYSTEM_PROBE_X64_SUFFIX: ""
-  CI_IMAGE_SYSTEM_PROBE_ARM64: v50263243-1a30c934
-  CI_IMAGE_SYSTEM_PROBE_ARM64_SUFFIX: ""
-  CI_IMAGE_RPM_X64: v50263243-1a30c934
-  CI_IMAGE_RPM_X64_SUFFIX: ""
-  CI_IMAGE_RPM_ARM64: v50263243-1a30c934
-  CI_IMAGE_RPM_ARM64_SUFFIX: ""
-  CI_IMAGE_RPM_ARMHF: v50263243-1a30c934
-  CI_IMAGE_RPM_ARMHF_SUFFIX: ""
-  CI_IMAGE_WIN_1809_X64: v50263243-1a30c934
-  CI_IMAGE_WIN_1809_X64_SUFFIX: ""
-  CI_IMAGE_WIN_LTSC2022_X64: v50263243-1a30c934
-  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: ""
+  CI_IMAGE_BTF_GEN: v53294406-72bf06e2
+  CI_IMAGE_BTF_GEN_SUFFIX: "_test_only"
+  CI_IMAGE_DEB_X64: v53294406-72bf06e2
+  CI_IMAGE_DEB_X64_SUFFIX: "_test_only"
+  CI_IMAGE_DEB_ARM64: v53294406-72bf06e2
+  CI_IMAGE_DEB_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_DEB_ARMHF: v53294406-72bf06e2
+  CI_IMAGE_DEB_ARMHF_SUFFIX: "_test_only"
+  CI_IMAGE_DD_AGENT_TESTING: v53294406-72bf06e2
+  CI_IMAGE_DD_AGENT_TESTING_SUFFIX: "_test_only"
+  CI_IMAGE_DOCKER_X64: v53294406-72bf06e2
+  CI_IMAGE_DOCKER_X64_SUFFIX: "_test_only"
+  CI_IMAGE_DOCKER_ARM64: v53294406-72bf06e2
+  CI_IMAGE_DOCKER_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_GITLAB_AGENT_DEPLOY: v53294406-72bf06e2
+  CI_IMAGE_GITLAB_AGENT_DEPLOY_SUFFIX: "_test_only"
+  CI_IMAGE_LINUX_GLIBC_2_17_X64: v53294406-72bf06e2
+  CI_IMAGE_LINUX_GLIBC_2_17_X64_SUFFIX: "_test_only"
+  CI_IMAGE_LINUX_GLIBC_2_23_ARM64: v53294406-72bf06e2
+  CI_IMAGE_LINUX_GLIBC_2_23_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_SYSTEM_PROBE_X64: v53294406-72bf06e2
+  CI_IMAGE_SYSTEM_PROBE_X64_SUFFIX: "_test_only"
+  CI_IMAGE_SYSTEM_PROBE_ARM64: v53294406-72bf06e2
+  CI_IMAGE_SYSTEM_PROBE_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_RPM_X64: v53294406-72bf06e2
+  CI_IMAGE_RPM_X64_SUFFIX: "_test_only"
+  CI_IMAGE_RPM_ARM64: v53294406-72bf06e2
+  CI_IMAGE_RPM_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_RPM_ARMHF: v53294406-72bf06e2
+  CI_IMAGE_RPM_ARMHF_SUFFIX: "_test_only"
+  CI_IMAGE_WIN_1809_X64: v53294406-72bf06e2
+  CI_IMAGE_WIN_1809_X64_SUFFIX: "_test_only"
+  CI_IMAGE_WIN_LTSC2022_X64: v53294406-72bf06e2
+  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: "_test_only"
 
   DATADOG_AGENT_EMBEDDED_PATH: /opt/datadog-agent/embedded
   DEB_GPG_KEY_ID: c0962c7d
