--- a/modules.yml
+++ b/modules.yml
@@ -35,9 +35,21 @@ modules:
   comp/core/status:
     used_by_otel: true
   comp/core/status/statusimpl: default
+  comp/core/tagger/def:
+    used_by_otel: true
+  comp/core/tagger/fx-remote:
+    used_by_otel: true
+  comp/core/tagger/generic_store:
+    used_by_otel: true
+  comp/core/tagger/impl-remote:
+    used_by_otel: true
   comp/core/tagger/origindetection:
     used_by_otel: true
+  comp/core/tagger/subscriber:
+    used_by_otel: true
   comp/core/tagger/tags:
+    used_by_otel: true
+  comp/core/tagger/telemetry:
     used_by_otel: true
   comp/core/tagger/types:
     used_by_otel: true
