allow only patches for k8s-io group

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -49,6 +49,8 @@ updates:
       k8s-io:
         patterns:
           - "k8s.io/*"
+        update-types:
+          - patch
   - package-ecosystem: gomod
     directory: /internal/tools
     labels:
