--- a/flakes.yaml
+++ b/flakes.yaml
@@ -1,10 +1,19 @@
-# Pkg Name: Test list
-# If you mute a parent test it will ignore all the subtests as well
-# For example:
+# * Here is the file format:
+# <package-name>:
+#  - test: <test-name> # Mark this test always flaky
+#  - test: <test-name>
+#    on-log: <log-pattern> # Mark this test flaky if the pattern (regex) is found within its log
+#  - test: <test-name>
+#    on-log: # Mark this test flaky if any of the patterns are found within its log
+#      - <log-pattern>
+#      - <log-pattern>
+# * For example:
 # "pkg/gohai":
-#   - "TestGetPayload"
-# "test/new-e2e/tests/agent-platform/install-script"
-#   - "TestInstallScript/test_install_script_on_centos-79_x86_64_datadog-agent_agent_7"
+#   - test: "TestGetPayload"
+# "test/new-e2e/tests/agent-platform/install-script":
+#   - test: "TestInstallScript/test_install_script_on_centos-79_x86_64_datadog-agent_agent_7"
+# * Note:
+# If you mute a parent test it will ignore all the subtests as well.
 
 # TODO: https://datadoghq.atlassian.net/browse/CONTINT-4143
 test/new-e2e/tests/containers:
