--- a/.copyright-overrides.yml
+++ b/.copyright-overrides.yml
@@ -390,3 +390,6 @@ github.com/transparency-dev/merkle/proof:
 github.com/transparency-dev/merkle/rfc6962: Copyright 2016 Google LLC. All Rights Reserved.
 
 gopkg.in/go-jose/go-jose.v2: Copyright 2014 Square Inc.
+
+# https://github.com/bhmj/xpression/blob/master/LICENCE
+github.com/bhmj/xpression: Copyright 2021-2022 Michael Gurov (github.com/bhmj)
