smp: update profiling settings for smp 0.20.1
`smp` 0.20.x introduces breaking changes in `profiling_environment`
settings such that profiling sockets in the `smp` `experiment.yaml`
configuration files may no longer be mounted at
`/var/run/datadog/apm.socket`. This commit instead mounts those
sockets at `/smp-host/apm.socket`.

Signed-off-by: Geoffrey M. Oxberry <geoffrey.oxberry@datadoghq.com>

--- a/test/regression/cases/quality_gate_idle_all_features/experiment.yaml
+++ b/test/regression/cases/quality_gate_idle_all_features/experiment.yaml
@@ -28,9 +28,9 @@ target:
     DD_INTERNAL_PROFILING_CPU_DURATION: 1m
     DD_SECURITY_AGENT_INTERNAL_PROFILING_CPU_DURATION: 1m
     # destination
-    DD_INTERNAL_PROFILING_UNIX_SOCKET: /var/run/datadog/apm.socket
-    DD_SYSTEM_PROBE_CONFIG_INTERNAL_PROFILING_UNIX_SOCKET: /var/run/datadog/apm.socket
-    DD_SECURITY_AGENT_INTERNAL_PROFILING_UNIX_SOCKET: /var/run/datadog/apm.socket
+    DD_INTERNAL_PROFILING_UNIX_SOCKET: /smp-host/apm.socket
+    DD_SYSTEM_PROBE_CONFIG_INTERNAL_PROFILING_UNIX_SOCKET: /smp-host/apm.socket
+    DD_SECURITY_AGENT_INTERNAL_PROFILING_UNIX_SOCKET: /smp-host/apm.socket
     # tags
     DD_INTERNAL_PROFILING_EXTRA_TAGS: experiment:quality_gate_idle_all_features
     DD_SYSTEM_PROBE_CONFIG_INTERNAL_PROFILING_EXTRA_TAGS: experiment:quality_gate_idle_all_features
