--- a/test/regression/cases/tcp_syslog_to_blackhole/experiment.yaml
+++ b/test/regression/cases/tcp_syslog_to_blackhole/experiment.yaml
@@ -18,7 +18,7 @@ target:
     DD_INTERNAL_PROFILING_ENABLE_GOROUTINE_STACKTRACES: true
     DD_INTERNAL_PROFILING_MUTEX_PROFILE_FRACTION: 10
     DD_INTERNAL_PROFILING_PERIOD: 1m
-    DD_INTERNAL_PROFILING_UNIX_SOCKET: /var/run/datadog/apm.socket
+    DD_INTERNAL_PROFILING_UNIX_SOCKET: /smp-host/apm.socket
     DD_PROFILING_EXECUTION_TRACE_ENABLED: true
     DD_PROFILING_EXECUTION_TRACE_PERIOD: 1m
     DD_PROFILING_WAIT_PROFILE: true
