--- a/tasks/libs/pipeline/github_slack_review_map.yaml
+++ b/tasks/libs/pipeline/github_slack_review_map.yaml
@@ -46,3 +46,4 @@
 '@datadog/agent-devx-loops': '#agent-devx-loops-reviews'
 '@datadog/apm-onboarding': '#apm-onboarding'
 '@datadog/apm-ecosystems-performance': '#apm-benchmarking-platform'
+'@datadog/injection-platform': '#injection-platform'
