--- a/.gitlab/.ci-linters.yml
+++ b/.gitlab/.ci-linters.yml
@@ -21,6 +21,7 @@ needs-rules:
     - deploy_containers-cws-instrumentation-rc-mutable
     - deploy_containers-cws-instrumentation-rc-versioned
     - dogstatsd_x64_size_test
+    - generate_windows_gitlab_runner_bump_pr
     - go_mod_tidy_check
     - lint_flavor_dogstatsd_linux-x64
     - lint_flavor_heroku_linux-x64
@@ -31,6 +32,7 @@ needs-rules:
     - lint_linux-x64
     - lint_macos_gitlab_amd64
     - new-e2e-eks-cleanup-on-failure
+    - protobuf_test
     - publish_winget_7_x64
     - revert_latest_7
     - security_go_generate_check
@@ -42,7 +44,6 @@ needs-rules:
     - tests_windows_sysprobe_x64
     - trigger_auto_staging_release
     - trigger_manual_prod_release
-    - generate_windows_gitlab_runner_bump_pr
 
 # Lists jobs that are allowed to not be within JOBOWNERS
 job-owners:
