--- a/test/otel/testdata/builder-config.yaml
+++ b/test/otel/testdata/builder-config.yaml
@@ -22,6 +22,8 @@ exporters:
 extensions:
 - gomod: github.com/DataDog/datadog-agent/comp/otelcol/ddflareextension/impl v0.61.0
   path: ./comp/otelcol/ddflareextension/impl
+- gomod: github.com/DataDog/datadog-agent/comp/otelcol/ddprofilingextension/impl v0.61.0
+  path: ./comp/otelcol/ddprofilingextension/impl
 - gomod: go.opentelemetry.io/collector/extension/zpagesextension v0.117.0
 - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckextension
     v0.117.0
