feat(PR): apply suggestions

--- a/test/static/static_quality_gates.yml
+++ b/test/static/static_quality_gates.yml
@@ -2,6 +2,6 @@ static_quality_gate_agent_deb_x64:
   max_on_wire_size: 279738356
   max_on_disk_size: 1271191168
 
-static_quality_gate_docker_agent:
-  max_on_wire_size: 279738356
+static_quality_gate_docker_agent_amd64:
+  max_on_wire_size: "266.779 MiB"
   max_on_disk_size: 1271191168
