Update release.json, .gitlab-ci.yml and notify.yml with 7.63.x

--- a/.gitlab/notify/notify.yml
+++ b/.gitlab/notify/notify.yml
@@ -54,7 +54,7 @@ notify_github:
       changes:
         paths:
           - '**/*.go'
-        compare_to: main # TODO: use a variable, when this is supported https://gitlab.com/gitlab-org/gitlab/-/issues/369916
+        compare_to: 7.63.x # TODO: use a variable, when this is supported https://gitlab.com/gitlab-org/gitlab/-/issues/369916
       when: on_success
     - when: never
   needs:
@@ -88,7 +88,7 @@ notify_gitlab_ci_changes:
         paths:
           - .gitlab-ci.yml
           - .gitlab/**/*.yml
-        compare_to: main # TODO: use a variable, when this is supported https://gitlab.com/gitlab-org/gitlab/-/issues/369916
+        compare_to: 7.63.x # TODO: use a variable, when this is supported https://gitlab.com/gitlab-org/gitlab/-/issues/369916
   script:
     # Python 3.12 changes default behavior how packages are installed.
     # In particular, --break-system-packages command line option is
